[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/combat/CombatArena.gd" type="Script" id=1]
[ext_resource path="res://src/combat/turn_queue/TurnQueue.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/combat/interface/CombatInterface.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/battle/BattleBackgrounds.png" type="Texture" id=4]
[ext_resource path="res://src/combat/Rewards.gd" type="Script" id=5]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node" parent="."]

[node name="Self" type="Position2D" parent="SpawnPositions"]
position = Vector2( 528, 768 )

[node name="Oppo" type="Position2D" parent="SpawnPositions"]
position = Vector2( 1424, 376 )

[node name="TurnQueue" parent="." instance=ExtResource( 2 )]
z_index = 10

[node name="CombatInterface" parent="." instance=ExtResource( 3 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 964.966, 240.5 )
scale = Vector2( 7.4726, 7.4726 )
texture = ExtResource( 4 )
hframes = 3
vframes = 4
frame = 4

[node name="Rewards" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Rewards"]
visible = false
margin_right = 1920.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Rewards/Panel"]
margin_left = -1.0
margin_right = 1919.0
margin_bottom = 120.0

[node name="AnimLayer" type="CanvasLayer" parent="."]
layer = 50
